# asynckafka

./: async_test.py  pyproject.toml  requirements.txt  setup.py  todo.text
asynckafka/: callbacks.pxd  callbacks.pyx  py.typed  settings.pyx  utils.pyx
asynckafka/consumer/: consumer.pxd  consumer.pyx  message.pxd  message.pyx  rd_kafka_consumer.pyx  topic_partition.pyx
asynckafka/includes/: c_rd_kafka.pxd
asynckafka/producer/: producer.pyx
tests/unit_tests/: rd_kafka_consumer_tests.pyx
