[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "asynckafka"
version = "0.3.25"
description = "Fast python kafka client for asyncio."
authors = ["José Melero Fernández <jmelerofernandez@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "asynckafka"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
]
keywords = ["asyncio", "kafka", "cython"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
cython = ">=0.29.21"
mypy-extensions = ">=0.4.3"
typing-extensions = ">=3.7.4"

[tool.poetry.build]
script = "setup.py"
generate-setup-file = false

[tool.poetry.plugins."poetry.application.plugin"]
stub-builder = "poetry_stubs_plugin:StubsPlugin"

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 